@@ -19,6 +19,7 @@ Verilator 5.031 devel
 * Support `pure constraint`.
 * Add `--no-std-package` as subset-alias of `--no-std`.
 * Add `--waiver-multiline` for context-sensitive `--waiver-output`.
+* Add `lint_off --contents` in configuration files. (#5606)
 * Add error on illegal enum base type (#3010). [Iztok Jeras]
 * Add error on `wait` with missing `.triggered` (#4457).
 * Add error when improperly storing to parameter (#5147). [Gökçe Aydos]
